# Trading-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sitecustomize.py
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_order_attempts_and_performance_indexes.py  0003_positions_symbol_scope.py
apps/api/: main.py
apps/api/middleware/: rate_limit.py  request_id.py  security_headers.py
apps/api/routers/: ai.py  auth.py  health.py  market.py  system.py  trading.py
apps/api/security/: __init__.py  auth.py
apps/web/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/web/src/: App.tsx  api.ts  auth.tsx  dashboard.tsx  index.css  utils.ts
apps/web/src/components/: ActivityFeed.tsx  AppLayout.tsx  Badge.tsx  DualSeriesChart.tsx  (+6 more)
docs/: API_EXAMPLES.md  API_RBAC_REFERENCE.md  ARCHITECTURE.mmd  CODE_REFERENCE.md  HOW_IT_WORKS.md  ONBOARDING_CHECKLIST.md  OPERATIONS_RUNBOOK.md  OPERATOR_QUICKSTART.md  README.md  SECRETS_MANAGEMENT.md  SEQUENCE_DIAGRAMS.md  USER_GUIDE.md
docs/postman/: Trading-Bot.local.postman_environment.json  Trading-Bot.postman_collection.json
scripts/: benchmark_local_models.py
secrets.example/: README.md
tests/: conftest.py
tests/unit/: test_adapter.py  test_ai_workflow.py  test_api.py  test_auth_api.py  test_binance_live_adapter.py  test_circuit_breaker.py  test_config.py  test_config_profiles.py  test_data_fetcher.py  test_drl_optimizer.py  test_extra_strategies.py  test_inventory_manager.py  test_live_engine.py  test_llm_client.py  test_market_api.py  test_market_regime.py  test_metrics_calculator.py  test_migrations.py  test_multi_agent.py  test_paper_engine.py  test_repository.py  test_risk_engine.py  test_scheduler.py  test_smart_grid_strategy.py  test_state.py  test_trading_cycle.py  test_trend_strategy.py  test_walk_forward.py
(+9 files in other folders)
